@@ -1,3 +1,8 @@
+2009-07-10  Zoltan Varga  <vargaz@gmail.com>
+
+	* TypeTest.cs: Add a test for #520690. Disable a test which fails on
+	MS.NET.
+
 2009-06-30  Zoltan Varga  <vargaz@gmail.com>
 
 	* IntPtrTest.cs: Disable a test whose corresponding fix was reverted.
